Updated Test Script

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,19 +10,41 @@
     "from selenium import webdriver\n",
     "from selenium.webdriver.chrome.service import Service as ChromeService\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
-    "from selenium.webdriver.common.by import By"
+    "from selenium.webdriver.common.by import By\n",
+    "import re "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
+    "url = 'https://www.congress.gov/search?q=%7B%22source%22%3A%22legislation%22%2C%22congress%22%3A118%7D'\n",
+    "driver = webdriver.Chrome(ChromeDriverManager().install())\n",
+    "driver.get(url)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result_headings = driver.find_elements_by_class_name('result-heading')\n",
     "\n",
     "# Extracting bills\n",
     "bills = [heading.text.strip() for heading in result_headings if heading.text.strip()]\n",
     "\n",
+    "driver.quit()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Function to parse bill information\n",
     "def parse_bill(bill):\n",
     "    # Extract bill type (H.R., S., H.J.Res., etc.)\n",
@@ -51,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -83,33 +105,33 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>H.R.7125 — 118th Congress (2023-2024)</td>\n",
+       "      <td>H.R.7154 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
-       "      <td>7125</td>\n",
+       "      <td>7154</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>H.R.7124 — 118th Congress (2023-2024)</td>\n",
+       "      <td>H.R.7153 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
-       "      <td>7124</td>\n",
+       "      <td>7153</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>H.R.7123 — 118th Congress (2023-2024)</td>\n",
+       "      <td>H.R.7152 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
-       "      <td>7123</td>\n",
+       "      <td>7152</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>H.R.7122 — 118th Congress (2023-2024)</td>\n",
+       "      <td>H.R.7151 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
-       "      <td>7122</td>\n",
+       "      <td>7151</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>H.R.7121 — 118th Congress (2023-2024)</td>\n",
+       "      <td>H.R.7150 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
-       "      <td>7121</td>\n",
+       "      <td>7150</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -119,33 +141,33 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>95</th>\n",
-       "      <td>H.R.7030 — 118th Congress (2023-2024)</td>\n",
+       "      <td>H.R.7059 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
-       "      <td>7030</td>\n",
+       "      <td>7059</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
-       "      <td>H.R.7029 — 118th Congress (2023-2024)</td>\n",
+       "      <td>H.R.7058 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
-       "      <td>7029</td>\n",
+       "      <td>7058</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
-       "      <td>H.R.7028 — 118th Congress (2023-2024)</td>\n",
+       "      <td>H.R.7057 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
-       "      <td>7028</td>\n",
+       "      <td>7057</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
-       "      <td>H.R.7027 — 118th Congress (2023-2024)</td>\n",
+       "      <td>H.R.7056 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
-       "      <td>7027</td>\n",
+       "      <td>7056</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
-       "      <td>H.R.7026 — 118th Congress (2023-2024)</td>\n",
+       "      <td>H.R.7055 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
-       "      <td>7026</td>\n",
+       "      <td>7055</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -154,22 +176,22 @@
       ],
       "text/plain": [
        "                            original_name      office number\n",
-       "0   H.R.7125 — 118th Congress (2023-2024)  house-bill   7125\n",
-       "1   H.R.7124 — 118th Congress (2023-2024)  house-bill   7124\n",
-       "2   H.R.7123 — 118th Congress (2023-2024)  house-bill   7123\n",
-       "3   H.R.7122 — 118th Congress (2023-2024)  house-bill   7122\n",
-       "4   H.R.7121 — 118th Congress (2023-2024)  house-bill   7121\n",
+       "0   H.R.7154 — 118th Congress (2023-2024)  house-bill   7154\n",
+       "1   H.R.7153 — 118th Congress (2023-2024)  house-bill   7153\n",
+       "2   H.R.7152 — 118th Congress (2023-2024)  house-bill   7152\n",
+       "3   H.R.7151 — 118th Congress (2023-2024)  house-bill   7151\n",
+       "4   H.R.7150 — 118th Congress (2023-2024)  house-bill   7150\n",
        "..                                    ...         ...    ...\n",
-       "95  H.R.7030 — 118th Congress (2023-2024)  house-bill   7030\n",
-       "96  H.R.7029 — 118th Congress (2023-2024)  house-bill   7029\n",
-       "97  H.R.7028 — 118th Congress (2023-2024)  house-bill   7028\n",
-       "98  H.R.7027 — 118th Congress (2023-2024)  house-bill   7027\n",
-       "99  H.R.7026 — 118th Congress (2023-2024)  house-bill   7026\n",
+       "95  H.R.7059 — 118th Congress (2023-2024)  house-bill   7059\n",
+       "96  H.R.7058 — 118th Congress (2023-2024)  house-bill   7058\n",
+       "97  H.R.7057 — 118th Congress (2023-2024)  house-bill   7057\n",
+       "98  H.R.7056 — 118th Congress (2023-2024)  house-bill   7056\n",
+       "99  H.R.7055 — 118th Congress (2023-2024)  house-bill   7055\n",
        "\n",
        "[100 rows x 3 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
