Added Stage Column

--- a/Test.ipynb
+++ b/Test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,21 +27,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
     "result_headings = driver.find_elements_by_class_name('result-heading')\n",
     "\n",
+    "stage_items = driver.find_elements_by_css_selector('.result-item.result-tracker .stat_leg .selected')\n",
+    "\n",
     "# Extracting bills\n",
     "bills = [heading.text.strip() for heading in result_headings if heading.text.strip()]\n",
+    "\n",
+    "stages = [stage.text.strip() for stage in stage_items if stage.text.strip()]\n",
     "\n",
     "driver.quit()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,12 +72,14 @@
     "        office, office_type, number = parsed_bill\n",
     "        new_data.append({'original_name': bill, 'office': office, 'number': number})\n",
     "\n",
-    "new_bills_df = pd.DataFrame(new_data)"
+    "new_bills_df = pd.DataFrame(new_data)\n",
+    "\n",
+    "new_bills_df['stage'] = stages"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -100,6 +106,7 @@
        "      <th>original_name</th>\n",
        "      <th>office</th>\n",
        "      <th>number</th>\n",
+       "      <th>stage</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -108,33 +115,39 @@
        "      <td>H.R.7154 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
        "      <td>7154</td>\n",
+       "      <td>Introduced</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>H.R.7153 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
        "      <td>7153</td>\n",
+       "      <td>Introduced</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>H.R.7152 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
        "      <td>7152</td>\n",
+       "      <td>Introduced</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>H.R.7151 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
        "      <td>7151</td>\n",
+       "      <td>Introduced</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>H.R.7150 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
        "      <td>7150</td>\n",
+       "      <td>Introduced</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -144,54 +157,59 @@
        "      <td>H.R.7059 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
        "      <td>7059</td>\n",
+       "      <td>Introduced</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>96</th>\n",
        "      <td>H.R.7058 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
        "      <td>7058</td>\n",
+       "      <td>Introduced</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
        "      <td>H.R.7057 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
        "      <td>7057</td>\n",
+       "      <td>Introduced</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
        "      <td>H.R.7056 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
        "      <td>7056</td>\n",
+       "      <td>Introduced</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
        "      <td>H.R.7055 — 118th Congress (2023-2024)</td>\n",
        "      <td>house-bill</td>\n",
        "      <td>7055</td>\n",
+       "      <td>Introduced</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>100 rows × 3 columns</p>\n",
+       "<p>100 rows × 4 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "                            original_name      office number\n",
-       "0   H.R.7154 — 118th Congress (2023-2024)  house-bill   7154\n",
-       "1   H.R.7153 — 118th Congress (2023-2024)  house-bill   7153\n",
-       "2   H.R.7152 — 118th Congress (2023-2024)  house-bill   7152\n",
-       "3   H.R.7151 — 118th Congress (2023-2024)  house-bill   7151\n",
-       "4   H.R.7150 — 118th Congress (2023-2024)  house-bill   7150\n",
-       "..                                    ...         ...    ...\n",
-       "95  H.R.7059 — 118th Congress (2023-2024)  house-bill   7059\n",
-       "96  H.R.7058 — 118th Congress (2023-2024)  house-bill   7058\n",
-       "97  H.R.7057 — 118th Congress (2023-2024)  house-bill   7057\n",
-       "98  H.R.7056 — 118th Congress (2023-2024)  house-bill   7056\n",
-       "99  H.R.7055 — 118th Congress (2023-2024)  house-bill   7055\n",
+       "                            original_name      office number       stage\n",
+       "0   H.R.7154 — 118th Congress (2023-2024)  house-bill   7154  Introduced\n",
+       "1   H.R.7153 — 118th Congress (2023-2024)  house-bill   7153  Introduced\n",
+       "2   H.R.7152 — 118th Congress (2023-2024)  house-bill   7152  Introduced\n",
+       "3   H.R.7151 — 118th Congress (2023-2024)  house-bill   7151  Introduced\n",
+       "4   H.R.7150 — 118th Congress (2023-2024)  house-bill   7150  Introduced\n",
+       "..                                    ...         ...    ...         ...\n",
+       "95  H.R.7059 — 118th Congress (2023-2024)  house-bill   7059  Introduced\n",
+       "96  H.R.7058 — 118th Congress (2023-2024)  house-bill   7058  Introduced\n",
+       "97  H.R.7057 — 118th Congress (2023-2024)  house-bill   7057  Introduced\n",
+       "98  H.R.7056 — 118th Congress (2023-2024)  house-bill   7056  Introduced\n",
+       "99  H.R.7055 — 118th Congress (2023-2024)  house-bill   7055  Introduced\n",
        "\n",
-       "[100 rows x 3 columns]"
+       "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
